[package]
name = "gavinsmedia"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "cookies"], default-features = false }
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[lib]
name = "gavinsmedia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies.open]
version = "5"
